# prj013

./: .flake8  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: filter_transactions.py  transactions.csv  transactions_excel_test.xlsx  transactions_test.csv
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_decorate_logs_py.html  z_145eef247bfb46b6_decorators_py.html  z_145eef247bfb46b6_external_api_py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_getfile_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_widget_py.html
lessons/part1/data/: excel.xlsx  file.csv  winemag-data-130k.xlsx
lessons/part1/src/: csv_read.py  filter.py  group_and_sort.py  indexes.py  pandas_file.py  sort.py  titanic1.py  titanic2.py  titanic3.py  titanic4.py
lessons/part1/tests/: test_titanic1.py  test_titanic2.py  test_titanic3.py
logs/: mylog.txt
src/: decorate_logs.py  decorators.py  external_api.py  generators.py  getfile.py  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_getfile.py  test_masks.py  test_processing.py  test_utilities.py  test_utils.py  test_widget.py
