[project]
name = "prj013"
version = "0.1.0"
description = ""
authors = [
    {name = "Ri Ga",email = "riga1897@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "poetry-core (>=2.1.3,<3.0.0)",
    "et-xmlfile (>=2.0.0)",
    "numpy (>=2.3.0rc1)",
    "openpyxl (>=3.1.5)",
    "pandas (>=2.2.3)",
    "python-dateutil (>=2.9.0.post0)",
    "pytz (>=2025.2)",
    "six (>=1.17.0)",
    "tzdata (>=2025.2)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pandas-stubs (>=2.2.3.250527,<3.0.0.0)",
    "types-requests (>=2.32.0.20250515,<3.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.mypy]
disallow_untyped_defs=true
warn_return_any=true
exclude = [
#  "tests",
  ".venv",
]

[tool.black]
line-length = 119
exclude = '''
(
    /(
        \.eggs.py
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    )/
    | foo.py
)
'''

[tool.isort]
# максимальная длина строки
line_length = 119